--- a/app/manifest.json
+++ b/app/manifest.json
@@ -16,10 +16,7 @@
     },
   "content_scripts": [
     {
-      "matches": [
-          "http://*/*",
-          "https://*/*"
-      ],
+      "matches": ["*://youtrack.articulate.com/issue/*"],
       "css": [
       ],
       "js": [
