--- a/.jshintrc
+++ b/.jshintrc
@@ -22,6 +22,7 @@
         "Pivotal": true,
         "jQuery": true,
         "$": true,
-        "md":true
+        "md":true,
+        "alert":true
     }
 }
