--- a/app/manifest.json
+++ b/app/manifest.json
@@ -11,6 +11,9 @@
     "permissions" : [
         "storage"
     ],
+    "web_accessible_resources": [
+       "images/tracker.png"
+    ],
     "default_locale": "en",
     "background": {
         "scripts": [
